# Object_Detection

./: .gitignore  LICENSE
visible-sys/: auto-imports.d.ts  components.d.ts  index.html  package.json  pnpm-lock.yaml  vite.config.ts
visible-sys/src/: App.vue  main.ts  vite-env.d.ts
visible-sys/src-tauri/: Cargo.toml  tauri.conf.json
visible-sys/src-tauri/src/: file.rs  main.rs  user.rs  yolo.rs
visible-sys/src/components/: MenuTree.vue
visible-sys/src/pages/: Compare.vue  Login.vue
visible-sys/src/pages/YOLO/: V5.vue  V5s.vue  V8.vue  V9.vue
visible-sys/src/router/: index.ts
vite-visualize/: package.json
yolov5/: yolov5.ipynb
yolov6/: yolov6.ipynb
yolov7/: yolov7.ipynb
yolov8/: yolov8.ipynb
yolov9/: yolov9.ipynb
