[package]
name = "visible-sys"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [
  "fs-all",
  "dialog-all",
  "clipboard-all",
  "protocol-asset",
  "shell-open",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tch = { version = "0.15" }
uuid = "1.8.0"
image = "0.24.6"
ndarray = "0.15.6"
ort = "1.15.2"
onnx = "0.1.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
